# FlickrDataPipeline

./: README.md
sentiment_analysis/: docker-compose.yaml  pyproject.toml  requirements.txt
sentiment_analysis/.github/: deploy.yml
sentiment_analysis/Dockerfiles/: Dockerfile.processor  Dockerfile.producer
sentiment_analysis/scripts/: run_processor.py  run_producer.py
sentiment_analysis/sentiment_analysis/processor/: config.py  processor.py
sentiment_analysis/sentiment_analysis/producer/: config.py  producer.py
sentiment_analysis/tests/: test_consumer.py  test_producer.py
