[tool.poetry]
name = "sentiment-analysis"
version = "0.1.0"
description = "Flicker geo Photo analysis"
authors = ["Vikash Singh <nl.vikashsingh@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
flask = "^3.0.0"
requests = "^2.31.0"
pyspark = "^3.5.0"
kafka-python = "^2.0.2"
click = "^8.1.7"
redis = "^5.0.1"
tqdm = "^4.66.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-mock = "^3.12.0"
flake8 = "^6.1.0"
black = "^23.12.1"

[tool.poetry.scripts]
flickr-producer = "sentiment_analysis.producer:main"
flickr-processor = "sentiment_analysis.processor:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
